útima versión corregida

--- a/views/blog.html
+++ b/views/blog.html
@@ -20,7 +20,7 @@
         <div class="row">
          <nav class="navbar navbar-expand-lg navbar-light">
              <div class="container-fluid">
-               <a class="navbar-brand" href="../index.html"><img src="../img/LogoAtticoGris.svg" width="165px" alt=""></a>
+               <a class="navbar-brand" href="../index.html"><img src="../img/LogoAtticoGris.svg" width="165px" alt="Logo"></a>
                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                  <span class="navbar-toggler-icon"></span>
                </button>
@@ -64,7 +64,7 @@
 <!--Primera Fila Blog-->
         <div class="col-lg-4 col-md-4 col-xs-12 colMarginBlog cardCenter">
             <div class="card w-90" style="width: 18rem;">
-                <img src="../img/BotanicoBlog.png" class="card-img-top" alt="...">
+                <img src="../img/BotanicoBlog.png" class="card-img-top" alt="Blog1">
                 <div class="card-body cardColor">
                   <h3>Estilo Botánico</h3>
                   <p>Darle un toque verde a tus espacios nunca esta demás. Descubre las nuevas alternativas del mercado en porcelanatos y cerámicas para que tus espacios se vuelvan acogedores y con un estilo único. Revisa los productos que recomendamos, desde impresiones con selvas a sutiles petalos en relevie para tus muros.</p>
@@ -74,7 +74,7 @@
         </div>
         <div class="col-lg-4 col-md-4 col-xs-12 colMarginBlog cardCenter">
             <div class="card w-90" style="width: 18rem;">
-                <img src="../img/InOutBloog.png" class="card-img-top" alt="...">
+                <img src="../img/InOutBloog.png" class="card-img-top" alt="Blog2">
                 <div class="card-body cardColor">
                     <h3>In&Out</h3>
                     <p>Actualmente la tendencia de los porcelanatos y gres tipo madera está en alza. Dentro de esta categoría destacan las series IN&OUT. Este concepto se aplica a los revestimientos que cuentan como una única terminación que sirve tanto para interior como para exterior, logrando darle continuidad a los espacios.
@@ -85,7 +85,7 @@
         </div>
         <div class="col-lg-4 col-md-4 col-xs-12 colMarginBlog cardCenter">
             <div class="card w-90" style="width: 18rem;">
-                <img src="../img/TerrazoBlog.png" class="card-img-top" alt="...">
+                <img src="../img/TerrazoBlog.png" class="card-img-top" alt="Blog3">
                 <div class="card-body cardColor">
                     <h3>Estilo Terrazo</h3>
                     <p>El look terrazo es una tendencia de los años ‘60 y ‘70 que hoy está revistiendo muros. Gracias a los avances técnicos han mejorado tanto las propiedades como la estética de este material. Actualmente se usa para revestir muros de baños y cocinas para darles un look elegante y moderno en su variedad de colores.</p>
@@ -96,7 +96,7 @@
 <!--Segunda Fila Blog-->
         <div class="col-lg-4 col-md-4 col-xs-12 colMarginBlog cardCenter">
             <div class="card w-90" style="width: 18rem;">
-                <img src="../img/MarmolBlog.png" class="card-img-top" alt="...">
+                <img src="../img/MarmolBlog.png" class="card-img-top" alt="Blog4">
                 <div class="card-body cardColor">
                     <h3>Tendencia Mármol</h3>
                     <p>El mundo del mármol en porcelanatos para pisos y muros está marcando tendencia, no sólo por su calidad y resistencia, sino también por la diversidad de colores y texturas de este tipo de productos, los que permiten crear ambientes únicos y elegantes, simulando incluso el uso de otros materiales. <p>
@@ -106,7 +106,7 @@
         </div>     
         <div class="col-lg-4 col-md-4 col-xs-12 colMarginBlog cardCenter">
             <div class="card w-90" style="width: 18rem;">
-                <img src="../img/PisoorganicoBlog.png" class="card-img-top" alt="...">
+                <img src="../img/PisoorganicoBlog.png" class="card-img-top" alt="Blog5">
                 <div class="card-body cardColor">
                     <h3>Pisos Orgánicos</h3>
                     <p>Es el primer pavimento 100% orgánico de producción sustentable, con tecnología que lo aísla de la humedad. Tiene la versatilidad de poder utilizarse en los diferentes espacios de tu casa como dormitorios, baños y cocina, entregándoles un look natural y acogedor gracias a la nobleza de la madera.</p>
@@ -116,7 +116,7 @@
         </div>
         <div class="col-lg-4 col-md-4 col-xs-12 colMarginBlog cardCenter">
             <div class="card w-90" style="width: 18rem;">
-                <img src="../img/LavaplatosBlog.png" class="card-img-top" alt="...">
+                <img src="../img/LavaplatosBlog.png" class="card-img-top" alt="Blog6">
                 <div class="card-body cardColor">
                     <h3>Tendencia Lavaplatos</h3>
                     <p>Con diseños únicos y elegantes, los lavaplatos de Johnson, junto con sus accesorios como tablas y regillas, se caracterizan por sus líneas curvas, cómoda capacidad interna y funcionalidad, logrando reunir soluciones para aquellas experiencias que acompañan el modo de habitar nuestra cocina.</p>
@@ -127,7 +127,7 @@
 <!--Tercera Fila Blog-->
         <div class="col-lg-4 col-md-4 col-xs-12 colMarginBlog cardCenter">
           <div class="card w-90" style="width: 18rem;">
-            <img src="../img/TopsBlog.png" class="card-img-top" alt="...">
+            <img src="../img/TopsBlog.png" class="card-img-top" alt="Blog7">
             <div class="card-body cardColor">
                 <h3>Tops</h3>
                 <p>Tecnología innovadora y personalizada que permite conseguir superficies satinadas y brillantes inalterables con el paso del tiempo, mármol, piedra, cemento y metales son la inspiración de estas placas de tops de porcelanato, utilizadas en atractivas cubiertas de cocina, baño, quinchos y edificios.
@@ -138,7 +138,7 @@
         </div>
         <div class="col-lg-4 col-md-4 col-xs-12 colMarginBlog cardCenter">
           <div class="card w-90" style="width: 18rem;">
-            <img src="../img/StoneBlog.png" class="card-img-top" alt="...">
+            <img src="../img/StoneBlog.png" class="card-img-top" alt="Blog8">
             <div class="card-body cardColor">
               <h3>Lavamanos Stone</h3>
               <p> Conocer lo último en tendencias de lavamanos. El material "Sandstone", que en español es piedra arenisca, entrega durabilidad, calidad y versatilidad, un look único y moderno. La nueva línea de la marca Klipen viene en distintos colores y formatos pensados especialmente para todo tipo de baños y estilos.</p>
@@ -148,7 +148,7 @@
         </div>
         <div class="col-lg-4 col-md-4 col-xs-12 colMarginBlog cardCenter">
           <div class="card w-90" style="width: 18rem;">
-            <img src="../img/2021Blog.png" class="card-img-top" alt="...">
+            <img src="../img/2021Blog.png" class="card-img-top" alt="Blog9">
             <div class="card-body cardColor">
               <h3>Tendencia 2021</h3>
               <p>Los colores de este año no son lo único que marca tendencia este año. Los terrazos minimalistas, cementos tímidos y modernos, mármoles más atrevidos y las maderas, junto a los bricks con look antiguo son lo que este año marcará tendencia en los revestimientos para el hogar.
@@ -205,13 +205,13 @@
       <div class="col-md-4 col-lg-2 text-center mx-auto my-4">
         <h5>Redes Sociales</h5>
           <a href="https://www.google.com/" type="button" class="btn-floating btn-fb">
-            <i class="fab fa-facebook-f"><img src="../img/facebook.svg" width="30px"alt=""></i>
+            <i class="fab fa-facebook-f"><img src="../img/facebook.svg" width="30px"alt="facebook"></i>
           </a>
           <a href="https://www.google.com/" type="button" class="btn-floating btn-tw">
-            <i class="fab fa-twitter"><img src="../img/instagram.svg" width="30px"alt=""></i>
+            <i class="fab fa-twitter"><img src="../img/instagram.svg" width="30px"alt="instagram"></i>
           </a>
           <a href="https://www.google.com/" type="button" class="btn-floating btn-gplus">
-            <i class="fab fa-google-plus-g"><img src="../img/linkedin.svg" width="30px" alt=""></i>
+            <i class="fab fa-google-plus-g"><img src="../img/linkedin.svg" width="30px" alt="linkedin"></i>
           </a>
       </div>
     </div>
