--- a/views/nosotros.html
+++ b/views/nosotros.html
@@ -19,7 +19,7 @@
         <div class="row">
          <nav class="navbar navbar-expand-lg navbar-light">
              <div class="container-fluid">
-               <a class="navbar-brand" href="../index.html"><img src="../img/LogoAtticoGris.svg" width="165px" alt=""></a>
+               <a class="navbar-brand" href="../index.html"><img src="../img/LogoAtticoGris.svg" width="165px" alt="Logo"></a>
                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                  <span class="navbar-toggler-icon"></span>
                </button>
@@ -71,7 +71,7 @@
   <div class="col-lg-3 col-md-6 col-xs-12 centerEquipo">
     <div class="card border-light" style="width: 13rem;">
       <div class="column" id="grayscale">
-        <img src="../img/arquitecto1.png" class="card-img-top" alt="arquitecto 1">
+        <img src="../img/arquitecto1.png" class="card-img-top" alt="arquitecto1">
       </div>
       <div class="card-body">
         <h3 class="card-title">Sofía García</h3>
@@ -82,7 +82,7 @@
   <div class="col-lg-3 col-md-6 col-xs-12 centerEquipo">
     <div class="card border-light" style="width: 13rem;">
       <div class="column" id="grayscale">
-        <img src="../img/arquitecto2.png" class="card-img-top" alt="...">
+        <img src="../img/arquitecto2.png" class="card-img-top" alt="arquitecto2">
       </div>
       <div class="card-body">
         <h3 class="card-title">Sebastián Moya</h3>
@@ -93,7 +93,7 @@
   <div class="col-lg-3 col-md-6 col-xs-12 centerEquipo">
     <div class="card border-light" style="width: 13rem;">
       <div class="column" id="grayscale">
-        <img src="../img/diseñador1.png" class="card-img-top" alt="...">
+        <img src="../img/diseñador1.png" class="card-img-top" alt="diseñador1">
       </div>
       <div class="card-body">
         <h3 class="card-title">Ana Díaz de Valdés</h3>
@@ -104,7 +104,7 @@
   <div class="col-lg-3 col-md-6 col-xs-12 centerEquipo">
     <div class="card border-light" style="width: 13rem;">
       <div class="column" id="grayscale">
-        <img src="../img/diseñador2.png" class="card-img-top" alt="...">
+        <img src="../img/diseñador2.png" class="card-img-top" alt="diseñador2">
       </div>
       <div class="card-body">
         <h3 class="card-title">Pilar Müller</h3>
@@ -119,7 +119,7 @@
   <div class="container text-md-left">   
     <div class="row">
       <div class="col-md-4 col-lg-3 mr-auto my-md-4 my-0 mt-5 mb-1">
-        <a href="./index.html"><img src="../img/LogoAtticoWhite.svg" width="210px" alt=""></a>
+        <a href="./index.html"><img src="../img/LogoAtticoWhite.svg" width="210px" alt="Logo"></a>
       </div>
       <hr class="clearfix w-100 d-md-none">        
       <div class="col-xs-12 col-md-4 col-lg-4 mx-auto my-md-4 my-0 mt-4 mb-1">
@@ -140,13 +140,13 @@
       <div class="col-md-4 col-lg-2 text-center mx-auto my-4">
         <h5>Redes Sociales</h5>
           <a href="https://www.google.com/" type="button" class="btn-floating btn-fb">
-            <i class="fab fa-facebook-f"><img src="../img/facebook.svg" width="30px"alt=""></i>
+            <i class="fab fa-facebook-f"><img src="../img/facebook.svg" width="30px"alt="facebook"></i>
           </a>
           <a href="https://www.google.com/" type="button" class="btn-floating btn-tw">
-            <i class="fab fa-twitter"><img src="../img/instagram.svg" width="30px"alt=""></i>
+            <i class="fab fa-twitter"><img src="../img/instagram.svg" width="30px"alt="instagram"></i>
           </a>
           <a href="https://www.google.com/" type="button" class="btn-floating btn-gplus">
-            <i class="fab fa-google-plus-g"><img src="../img/linkedin.svg" width="30px" alt=""></i>
+            <i class="fab fa-google-plus-g"><img src="../img/linkedin.svg" width="30px" alt="linkedin"></i>
           </a>
       </div>
     </div>
