--- a/views/servicios.html
+++ b/views/servicios.html
@@ -21,7 +21,7 @@
         <div class="row">
          <nav class="navbar navbar-expand-lg navbar-light">
              <div class="container-fluid">
-               <a class="navbar-brand" href="../index.html"><img src="../img/LogoAtticoGris.svg" width="165px" alt=""></a>
+               <a class="navbar-brand" href="../index.html"><img src="../img/LogoAtticoGris.svg" width="165px" alt="Logo"></a>
                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                  <span class="navbar-toggler-icon"></span>
                </button>
@@ -71,7 +71,7 @@
     <div class="row g-4">
       <div data-aos="zoom-in-right" class="col-lg-6 col-md-6 col-xs-12 serviciosCenter">
         <div class="card shadow" style="width: 18rem;">
-          <img src="../img/ServicioProyecto1.png" class="card-img-top" alt="...">
+          <img src="../img/ServicioProyecto1.png" class="card-img-top" alt="Servicio1">
           <div class="card-body">
             <h3 class="card-title">Proyecto</h3>
             <p class="card-text">Armamos un proyecto completo para que puedas montarlo con tus propias manos desde cero. Ofrecemos toda la asesoría y mano de obra para obras nuevas o renovaciones totales. Dentro de este servicio existen distintas instancias de visitas en obra y visualización 2D y 3D del proyecto.</p>
@@ -80,7 +80,7 @@
       </div>
       <div data-aos="zoom-in-right" class="col-lg-6 col-md-6 col-xs-12 serviciosCenter">
         <div class="card shadow"  style="width: 18rem;">
-          <img src="../img/ServicioRemodelación1.png" class="card-img-top" alt="...">
+          <img src="../img/ServicioRemodelación1.png" class="card-img-top" alt="Servicio2">
           <div class="card-body">
             <h3 class="card-title">Remodelación</h3>
             <p class="card-text">Nosotros te asesoramos y construimos lo que requieras para la remodelación de tus espacios, si no quieres partir de cero y solo necesitas un nuevo aire. En este servicio también ofrecemos visitas y asesoramiento durante toda la obra, y visualizaciones previas de las propuestas.</p>
@@ -89,7 +89,7 @@
       </div>
       <div data-aos="zoom-in-right" class="col serviciosCenter">
         <div class="card shadow" style="width: 18rem;">
-          <img src="../img/ServicioMuebles1.png" class="card-img-top" alt="...">
+          <img src="../img/ServicioMuebles1.png" class="card-img-top" alt="Servicio3">
           <div class="card-body">
             <h3 class="card-title">Muebles</h3>
             <p class="card-text">Nuestro estudio cuenta con un taller de carpintería para realizar los muebles que nuestros proyectos requieran, y así desarrollar propuestas integrales. También diseñamos y fabricamos muebles a pedido, únicos para cliente y sus necesidades. </p>
@@ -98,7 +98,7 @@
       </div>
       <div data-aos="zoom-in-right" class="col serviciosCenter">
         <div class="card shadow" style="width: 18rem;">
-          <img src="../img/ServicioDecoración1.png" class="card-img-top" alt="...">
+          <img src="../img/ServicioDecoración1.png" class="card-img-top" alt="servicio4">
           <div class="card-body">
             <h3 class="card-title">Decoración</h3>
             <p class="card-text">Si solo requieres la asesoría y montaje para decorar tu hogar, te ofrecemos nuestro servicio de interiorismo donde nos encargamos de todo, asesoría, compra y/o montaje de los revestimientos, adornos, muebles, lo que necesites para lograr el hogar soñado. </p>
@@ -112,7 +112,7 @@
   <div class="container text-md-left">   
     <div class="row">
       <div class="col-md-4 col-lg-3 mr-auto my-md-4 my-0 mt-5 mb-1">
-        <a href="./index.html"><img src="../img/LogoAtticoWhite.svg" width="210px" alt=""></a>
+        <a href="./index.html"><img src="../img/LogoAtticoWhite.svg" width="210px" alt="Logo"></a>
       </div>
       <hr class="clearfix w-100 d-md-none">        
       <div class="col-xs-12 col-md-4 col-lg-4 mx-auto my-md-4 my-0 mt-4 mb-1">
@@ -133,13 +133,13 @@
       <div class="col-md-4 col-lg-2 text-center mx-auto my-4">
         <h5>Redes Sociales</h5>
           <a href="https://www.google.com/" type="button" class="btn-floating btn-fb">
-            <i class="fab fa-facebook-f"><img src="../img/facebook.svg" width="30px"alt=""></i>
+            <i class="fab fa-facebook-f"><img src="../img/facebook.svg" width="30px"alt="facebook"></i>
           </a>
           <a href="https://www.google.com/" type="button" class="btn-floating btn-tw">
-            <i class="fab fa-twitter"><img src="../img/instagram.svg" width="30px"alt=""></i>
+            <i class="fab fa-twitter"><img src="../img/instagram.svg" width="30px"alt="instagram"></i>
           </a>
           <a href="https://www.google.com/" type="button" class="btn-floating btn-gplus">
-            <i class="fab fa-google-plus-g"><img src="../img/linkedin.svg" width="30px" alt=""></i>
+            <i class="fab fa-google-plus-g"><img src="../img/linkedin.svg" width="30px" alt="linkedin"></i>
           </a>
       </div>
     </div>
