--- a/views/proyectos.html
+++ b/views/proyectos.html
@@ -19,7 +19,7 @@
         <div class="row">
          <nav class="navbar navbar-expand-lg navbar-light">
              <div class="container-fluid">
-               <a class="navbar-brand" href="../index.html"><img src="../img/LogoAtticoGris.svg" width="165px" alt=""></a>
+               <a class="navbar-brand" href="../index.html"><img src="../img/LogoAtticoGris.svg" width="165px" alt="Logo"></a>
                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                  <span class="navbar-toggler-icon"></span>
                </button>
@@ -59,7 +59,8 @@
   <div class="row marginImgPro">
     <div class="col-lg-4 col-md-6 col-xs-12 marginImgPro grid">
       <figure class="effect-sadie">
-        <img class="img-fluid mx-auto d-block" src="../img/CocinaVintaje.png" alt="">
+        <img class="img-fluid mx-auto d-block" src="../img/CocinaVintaje.png" alt="
+        Galeria1">
         <figcaption>
           <h3>Cocina <span>Las Condes</span></h3> 
           <p>Proyecto cocina estilo vintage casa Las Condes.</p>
@@ -69,7 +70,7 @@
     </div>
     <div class="col-lg-4 col-md-6 col-xs-12 marginImgPro grid">
       <figure class="effect-sadie">
-        <img class="img-fluid mx-auto d-block" src="../img/Galeria1.png" alt="">
+        <img class="img-fluid mx-auto d-block" src="../img/Galeria1.png" alt="Galeria2">
         <figcaption>
           <h3>Muebles <span>Los Molinos</span></h3> 
           <p>Desarrollo de mobiliario casa Los Molinos.</p>
@@ -79,7 +80,7 @@
     </div>
     <div class="col-lg-4 col-md-6 col-xs-12 marginImgPro grid">
       <figure class="effect-sadie">
-        <img class="img-fluid mx-auto d-block" src="../img/TerrazaMadera.png" alt="">
+        <img class="img-fluid mx-auto d-block" src="../img/TerrazaMadera.png" alt="Galeria3">
         <figcaption>
           <h3>Terraza <span>Pacheco</span></h3> 
           <p>Remodelación terraza y quincho en Región del Maule.</p>
@@ -89,7 +90,7 @@
     </div>
     <div class="col-lg-4 col-md-6 col-xs-12 marginImgPro grid">
       <figure class="effect-sadie">
-        <img class="img-fluid mx-auto d-block" src="../img/Galeria6.png" alt="">
+        <img class="img-fluid mx-auto d-block" src="../img/Galeria6.png" alt="Galeria4">
         <figcaption>
           <h3>Proyecto <span>Isidora</span></h3> 
           <p>Desarrollo de obra nueva para casa en la playa.</p>
@@ -99,7 +100,7 @@
     </div>
     <div class="col-lg-4 col-md-6 col-xs-12 marginImgPro grid">
       <figure class="effect-sadie">
-        <img class="img-fluid rounded mx-auto d-block" src="../img/Galeria10.png" alt="">
+        <img class="img-fluid rounded mx-auto d-block" src="../img/Galeria10.png" alt="Galeria5">
       <figcaption>
         <h3>Hotel <span>Las Leñas</span></h3> 
         <p>Decoración de habitaciones para Hotel en Las Leñas.</p>
@@ -109,7 +110,7 @@
     </div>
     <div class="col-lg-4 col-md-6 col-xs-12 marginImgPro grid">
       <figure class="effect-sadie">
-        <img class="img-fluid mx-auto d-block" src="../img/BañoModerno.png" alt="">
+        <img class="img-fluid mx-auto d-block" src="../img/BañoModerno.png" alt="Galeria6">
       <figcaption>
         <h3>Baño <span>San Damian</span></h3> 
         <p>Remodelación de baño para casa en San Damian.</p>
@@ -119,7 +120,7 @@
     </div>
     <div class="col-lg-4 col-md-6 col-xs-12 marginImgPro grid">
       <figure class="effect-sadie">
-        <img class="img-fluid mx-auto d-block" src="../img/Galeria8.png" alt="">
+        <img class="img-fluid mx-auto d-block" src="../img/Galeria8.png" alt="Galeria7">
       <figcaption>
         <h3>Baño <span>Santa Cruz</span></h3> 
         <p>Remodelación de baño principal para casa en Santa Cruz.</p>
@@ -129,7 +130,7 @@
     </div>
     <div class="col-lg-4 col-md-6 col-xs-12 marginImgPro grid">
       <figure class="effect-sadie">
-        <img class="img-fluid mx-auto d-block" src="../img/Galeria3.png" alt="">
+        <img class="img-fluid mx-auto d-block" src="../img/Galeria3.png" alt="Galeria8">
       <figcaption>
         <h3>Cocina <span>Tobalaba</span></h3> 
         <p>Remodelación para cocina en departamento.</p>
@@ -139,7 +140,7 @@
     </div>
     <div class="col-lg-4 col-md-6 col-xs-12 marginImgPro grid">
       <figure class="effect-sadie">
-        <img class="img-fluid mx-auto d-block" src="../img/Galeria9.png" alt="">
+        <img class="img-fluid mx-auto d-block" src="../img/Galeria9.png" alt="Galeria9">
       <figcaption>
         <h3>Muebles <span>Rancagua</span></h3> 
         <p>Desarrollo de muebles para casa en Rancagua.</p>
@@ -149,7 +150,7 @@
     </div>
     <div class="col-lg-4 col-md-6 col-xs-12 marginImgPro grid">
       <figure class="effect-sadie">
-         <img class="img-fluid mx-auto d-block" src="../img/Galeria2.png" alt="">
+         <img class="img-fluid mx-auto d-block" src="../img/Galeria2.png" alt="Galeria10">
       <figcaption>
         <h3>Baños <span>Pirque</span></h3> 
         <p>Remodelación de baño para casa en Pirque.</p>
@@ -159,7 +160,7 @@
     </div>
     <div class="col-lg-4 col-md-6 col-xs-12 marginImgPro grid">
       <figure class="effect-sadie">
-        <img class="img-fluid mx-auto d-block" src="../img/Galeria7.png" alt="">
+        <img class="img-fluid mx-auto d-block" src="../img/Galeria7.png" alt="Galeria11">
       <figcaption>
         <h3>Cocina <span>San Fernando</span></h3> 
         <p>Remodelación de cocina estilo moderno para casa en San Fermando.</p>
@@ -169,7 +170,7 @@
     </div>
     <div class="col-lg-4 col-md-6 col-xs-12 marginImgPro grid">
       <figure class="effect-sadie">
-        <img class="img-fluid mx-auto d-block" src="../img/Galeria12.png" alt="">
+        <img class="img-fluid mx-auto d-block" src="../img/Galeria12.png" alt="Galeria12">
       <figcaption>
         <h3>Decoración <span>Las Condes</span></h3> 
         <p>Decoración para habitación de niños en Las Condes.</p>
@@ -184,7 +185,7 @@
   <div class="container text-md-left">   
     <div class="row">
       <div class="col-md-4 col-lg-3 mr-auto my-md-4 my-0 mt-5 mb-1">
-        <a href="./index.html"><img src="../img/LogoAtticoWhite.svg" width="210px" alt=""></a>
+        <a href="./index.html"><img src="../img/LogoAtticoWhite.svg" width="210px" alt="Logo"></a>
       </div>
       <hr class="clearfix w-100 d-md-none">        
       <div class="col-xs-12 col-md-4 col-lg-4 mx-auto my-md-4 my-0 mt-4 mb-1">
@@ -205,13 +206,13 @@
       <div class="col-md-4 col-lg-2 text-center mx-auto my-4">
         <h5>Redes Sociales</h5>
           <a href="https://www.google.com/" type="button" class="btn-floating btn-fb">
-            <i class="fab fa-facebook-f"><img src="../img/facebook.svg" width="30px"alt=""></i>
+            <i class="fab fa-facebook-f"><img src="../img/facebook.svg" width="30px"alt="facebook"></i>
           </a>
           <a href="https://www.google.com/" type="button" class="btn-floating btn-tw">
-            <i class="fab fa-twitter"><img src="../img/instagram.svg" width="30px"alt=""></i>
+            <i class="fab fa-twitter"><img src="../img/instagram.svg" width="30px"alt="instagram"></i>
           </a>
           <a href="https://www.google.com/" type="button" class="btn-floating btn-gplus">
-            <i class="fab fa-google-plus-g"><img src="../img/linkedin.svg" width="30px" alt=""></i>
+            <i class="fab fa-google-plus-g"><img src="../img/linkedin.svg" width="30px" alt="linkedin"></i>
           </a>
       </div>
     </div>
