última versión proyecto coder

--- a/views/nosotros.html
+++ b/views/nosotros.html
@@ -57,7 +57,7 @@
 <section class="container-fluid secUnoNosotros d-flex justify-content-center">
   <div class="row secTextoNosotros">
     <div class="col-lg-12 col-md-12 col-xs-12 mt-1">
-      <h2 class="mb-3">Quienes Somos</h2>
+      <h2 class="mb-3">Quiénes Somos</h2>
       <p>Somos un estudio de arquitectura de interior dedicado al diseño para remodelaciones y decoración de interiores. <span> Nuestra pasión es crear hogares cálidos y llenos de vida,</span> con historias que nos invitan a compartir con nuestros seres queridos, en espaciones que transmitan emociones.</p>
     </div>
   </div>
